.data/projects/darklua-0.17.2/src/rules/snapshots/darklua_core__rules__inject_value__test__inject_hello_value_as_var.snap
---
source: src/rules/inject_value.rs
expression: rule

---
{
  "rule": "inject_global_value",
  "identifier": "VAR",
  "value": "hello"
}
